--- a/index.html
+++ b/index.html
@@ -64,6 +64,40 @@
         <div><h1>WORK INQUIRY</h1></div>
         <div><a href="#">Let's Chat</a></div>
     </div>
+    <div class="testimonial1">
+        <h2>LET'S LOOK WHAT OUR CLIENT SAID</h2>
+        <div class="testimonial">
+           <div class="textbox">
+               <img src="images/person2.jpg" alt="">
+               <p class="name">David Saggers, Kalgoorlie WA</p>
+               <p class="chat">"Hi guys, just like to thank you for your fast delivery and service, geny looks and runs good. I got out to my camp just on dark, put geny on my pad and with a press of the remote, away it went. I will recommend it to all my fellow prospectors. I give you a 5 star plus for your good fast service. A pleasure to do business with you and will tell my friends to buy from you also. Thanks again!"</p>
+               
+
+           </div>
+           <div class="textbox">
+               <img src="images/person1.jpg" alt="">
+               <p class="name">Rigo R. CA</p>
+               <p class="chat">"This really is the most incredible service that most website owners should consider using.
+
+                   Easy to generate custom policies in minutes & having the peace of mind & protection these policies can offer is priceless. Will definitely recommend to others. Thank you"</p>
+           </div>
+           <div class="textbox">
+               <img src="images/person2.jpg" alt="">
+               <p class="name">Saggers, CEO</p>
+               <p class="chat">"Hi guys, just like to thank you for your fast delivery and service, geny looks and runs good. I got out to my camp just on dark, put geny on my pad and with a press of the remote, away it went. I will recommend it to all my fellow prospectors. I give you a 5 star plus for your good fast service. A pleasure to do business with you and will tell my friends to buy from you also. Thanks again!"</p>
+               
+
+           </div>
+           <div class="textbox">
+               <img src="images/person1.jpg" alt="">
+               <p class="name">Davidson Al.</p>
+               <p class="chat">"This really is the most incredible service that most website owners should consider using.
+
+                   Easy to generate custom policies in minutes & having the peace of mind & protection these policies can offer is priceless. Will definitely recommend to others. Thank you"</p>
+           </div>
+
+       </div>
+    </div>
     <footer>
         <h2>STAY CONNECTED</h2>
         <h1>nasimmahbub.web@gmail.com</h1>
